# ComfyUI_KokoroTTS_MW

./: KokoroTextToSpeech.py  LICENSE  README-CN.md  README-en.md  README.md  __init__.py  pyproject.toml  requirements.txt
workflow-examples/: Dialogue-en.json  Dialogue-zh.json  TTS.json
