[project]
name = "kokorotts_mw"
description = "A Text To Speech node using Kokoro TTS in ComfyUI. Supports 8 languages and 150 voices"
version = "2.1.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/billwuhao/ComfyUI_KokoroTTS_MW"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mw"
DisplayName = "ComfyUI_KokoroTTS_MW"
Icon = "https://github.com/billwuhao/aiart.website/blob/master/hb.png"
